--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
 
         <mdui-select id="api-url-select" icon="airline_stops" label="查询线路" value="https://api.openai.com"
           onchange="toggleCustomUrlInput()">
-          <mdui-menu-item value="https://api.openai.com">[官网线路]api.openai.com</mdui-menu-item>
-          <mdui-menu-item value="https://oapi.czl.net">[CZLoapi线路]oapi.czl.net</mdui-menu-item>
-          <mdui-menu-item
-            value="https://gateway.ai.cloudflare.com/v1/feedd0aa8abd6875052d86a94f1baf83/test/openai">[Cloudflare网关]查不了已用量</mdui-menu-item>
-          <mdui-menu-item value="https://openai.996.lat">[群友CF反代]openai.996.lat</mdui-menu-item>
+          <mdui-menu-item value="https://api.openai.com">【官网线路】需魔法</mdui-menu-item>
+          <mdui-menu-item value="https://proxy.aigc369.com">【国内线路】无需魔法</mdui-menu-item>
           <mdui-menu-item value="custom">[已前置https]自定义</mdui-menu-item>
         </mdui-select>
 
@@ -94,8 +91,7 @@
         </mdui-menu>
 
         <div style="margin-top:20px;">
-          <mdui-chip elevated icon="code"> 本网页由<a href="https://woodchen.ink" target="_blank">woodchen</a>开源于<a
-              href="https://github.com/woodchen-ink/openai-billing-query" target="_blank">Github</a>
+          <mdui-chip elevated icon="code"> © 2023 <a href="https://link3.cc/aipro" target="_blank">AI实验室</a>. All rights reserved.</a>
           </mdui-chip>
         </div>
       </div>
