--- a/get_sess1.html
+++ b/get_sess1.html
@@ -28,9 +28,8 @@
       <p style="display: inline-block; font-size: smaller;">支持自定义线路，官网线路需要魔法</p>
     </div>
     <select id="api-url-select" style="width:49%;">
-      <option value="https://api.openai.com">【官网线路】api.openai.com</option>
-      <option value="https://oapi.czl.net">【CZLoapi线路】oapi.czl.net</option>
-      <option value="https://openai.996.lat">【群友提供公益CF反代,勿测重要key】openai.996.lat</option>
+      <option value="https://api.openai.com">【官网线路】需魔法</option>
+      <option value="https://proxy.aigc369.com">【国内线路】无需魔法</option>
       <option value="custom">【已前置https】自定义 ...</option>
     </select>
 
@@ -52,14 +51,7 @@
   </table>
 
   <footer>
-    <p>广告链接：
-      <a href="https://chat.czl.net" target="_blank">CZLChat</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://oapi.czl.net" target="_blank">CZLOapi</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="https://store0.czl.net" target="_blank">CZL Store</a>
-      <br>
-      本网页由<a href="https://woodchen.ink" target="_blank">woodchen</a>开源于<a
-        href="https://github.com/woodchen-ink/openai-billing-query" target="_blank">Github</a>,欢迎给个star
-    </p>
+    
 
   </footer>
   <script src="./static/sess1.js"></script>
