--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <mdui-menu dense style="width:100%;margin-top:20px;">
           <mdui-menu-item icon="search" href="index.html">查API信息</mdui-menu-item>
           <mdui-menu-item icon="vpn_key" href="get_sess1.html">通过access token获取sess</mdui-menu-item>
-          <mdui-menu-item icon="build" href="https://woodchen.ink/1266.html"
+          <mdui-menu-item icon="build" href="https://ssw9noe1h6.feishu.cn/wiki/B8Pqw4gCgihqB0kFHcZck8tvnIg"
             target="_blank">手动获取sess的方法</mdui-menu-item>
         </mdui-menu>
 
