--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <mdui-navigation-drawer open class="left-drawer" close-on-overlay-click >
       <div class="left-drawer-main">
-        <h3>输入 API KEY</h3>
+        <h3>输入 SESS ID（使用 API KEY 只能获取部分信息）</h3>
         <p>本站不保存 KEY 信息，查询后请自行保存</p>
         <mdui-text-field id="api-key-input" placeholder="请输入 API-KEY或sessID，多个可直接粘贴" 
           label="API-KEY或sessID" rows="6"></mdui-text-field>
