--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OpenAI API 信息查询</title>
+  <title>OpenAI API 一键信息查询</title>
   <meta name="description" content="批量快速查询OPENAI的余额，支持可视化展现已用比例、额度、已用量、未用量、是否GPT-4、是否GPT4-32K、是否绑卡、绑卡信息、组织信息、是否有效">
   <link rel="stylesheet" href="./static/css-1.css" type="text/css" />
   <link rel="stylesheet" href="./static/mdui/mdui.css">
