--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <mdui-top-app-bar>
       <mdui-button-icon icon="menu" close-on-overlay-click id="toggle-button"></mdui-button-icon>
-      <mdui-top-app-bar-title style="text-align: center;">OpenAI API 信息查询</mdui-top-app-bar-title>
+      <mdui-top-app-bar-title style="text-align: center;">OpenAI API 一键信息查询</mdui-top-app-bar-title>
     </mdui-top-app-bar>
 
     <mdui-navigation-drawer open class="left-drawer" close-on-overlay-click >
