--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <mdui-menu-item icon="search" href="index.html">查API信息</mdui-menu-item>
           <mdui-menu-item icon="vpn_key" href="get_sess1.html">通过access token获取sess</mdui-menu-item>
           <mdui-menu-item icon="build" href="https://ssw9noe1h6.feishu.cn/wiki/B8Pqw4gCgihqB0kFHcZck8tvnIg"
-            target="_blank">手动获取sess1的方法</mdui-menu-item>
+            target="_blank">手动获取sess的方法</mdui-menu-item>
           <mdui-menu-item icon="account_tree" href="https://github.com/pandora-next/deploy"
             target="_blank">pandora无痛获取access</mdui-menu-item>
         </mdui-menu>
